--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.11.10",
     "@mui/styled-engine-sc": "^5.11.9",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,7 +18,9 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-fontawesome": "^1.6.5",
     "@types/swiper": "^6.0.0",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
