--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-fontawesome": "^1.6.5",
     "@types/swiper": "^6.0.0",
+    "@types/yandex-maps": "^2.1.29",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
     "prettier": "^2.8.4",
@@ -38,7 +39,8 @@
     "styled-components": "^5.3.6",
     "swiper": "^9.1.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yandex-maps": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
