--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
+    "react-i18next": "^12.2.2",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
