--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-i18next": "^12.2.2",
+    "react-loader-spinner": "^5.4.5",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
