--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -24,6 +25,7 @@
     "@types/yandex-maps": "^2.1.29",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.3",
+    "nodemailer": "^6.9.7",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
